# docs/swagger.yaml
@@ -176,6 +176,38 @@ paths:
         '200':
           description: Alojamiento eliminado
 
+  /alojamientos/anfitrion:
+    get:
+      summary: Obtener los alojamientos de un anfitrion
+      tags: [Alojamientos]
+      parameters:
+        - in: query
+          name: id
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: page
+          required: false
+          schema:
+            type: integer
+            example: 1
+        - in: query
+          name: limit
+          required: false
+          schema:
+            type: integer
+            example: 10
+      responses:
+        '200':
+          description: Lista de alojamientos del anfitrión
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Alojamiento'
+
   /reservar:
     post:
       summary: Crear reserva
@@ -254,6 +286,32 @@ paths:
       responses:
         '200':
           description: Reservas del usuario
+  
+  /reservas/anfitrion:
+    get:
+      summary: Obtener reservas de un anfitrion
+      tags: [Reservas]
+      parameters:
+        - in: query
+          name: id
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: page
+          required: false
+          schema:
+            type: integer
+            example: 1
+        - in: query
+          name: limit
+          required: false
+          schema:
+            type: integer
+            example: 10
+      responses:
+        '200':
+          description: Lista de reservas del anfitrión
 
   /login/huesped:
     post:
